--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.6"
+  },
+  "dependencies": {
+    "uuid-random": "^1.3.2"
   }
 }
