--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "react-native-get-random-values": "^1.4.0"
+    "uuid-random": "^1.3.2"
   }
 }
